@@ -3,11 +3,12 @@ package com.magicrealms.magicplayer.core.command;
 import com.magicrealms.magiclib.bukkit.command.annotations.CommandListener;
 import com.magicrealms.magiclib.bukkit.command.annotations.TabComplete;
 import com.magicrealms.magiclib.bukkit.command.enums.PermissionType;
+import com.magicrealms.magicplayer.common.util.PlayerSessionUtil;
+import com.magicrealms.magicplayer.core.MagicPlayer;
 import org.apache.commons.lang3.StringUtils;
 import org.bukkit.command.CommandSender;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -21,16 +22,36 @@ public class AvatarTabController {
 
     @TabComplete(text = "^\\s?$", permissionType = PermissionType.OP, label = "^avatar$")
     public List<String> first(CommandSender sender, String[] args) {
-        return Stream.of("id")
-                .collect(Collectors.toList());
+        return Stream.concat(Stream.of("id"),
+                PlayerSessionUtil.getOnlinePlayerNames(MagicPlayer
+                                .getInstance()
+                                .getRedisStore()).stream())
+                .toList();
     }
 
     @TabComplete(text = "^\\S+$", permissionType = PermissionType.OP, label = "^avatar$")
     public List<String> firstTab(CommandSender sender, String[] args) {
-        return Stream.of("id")
+        return Stream.concat(Stream.of("id"),
+                        PlayerSessionUtil.getOnlinePlayerNames(MagicPlayer
+                                .getInstance()
+                                .getRedisStore()).stream())
                 .filter(e ->
                         StringUtils.startsWithIgnoreCase(e, args[0]))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @TabComplete(text = "^\\S+\\s$", permissionType = PermissionType.OP, label = "^avatar$")
+    public List<String> second(CommandSender sender, String[] args) {
+        return Stream.of("id")
+                .toList();
+    }
+
+    @TabComplete(text = "^\\S+\\s\\S+$", permissionType = PermissionType.OP, label = "^avatar$")
+    public List<String> secondTab(CommandSender sender, String[] args) {
+        return Stream.of("id")
+                .filter(e ->
+                        StringUtils.startsWithIgnoreCase(e, args[1]))
+                .toList();
     }
 
 }
